--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "bootstrap": "^4.2.1",
     "css-loader": "^2.1.0",
     "local-store": "^0.2.0",
+    "prop-types": "^15.7.2",
     "react": "^16.7.0",
+    "react-axios": "^2.0.5",
     "react-bootstrap": "^0.32.4",
     "react-dom": "^16.7.0",
     "react-redux": "^6.0.0",
